SERVER-3189 fix listDatabases race condition that was causing dbcase test to fail